--- a/estilo.css
+++ b/estilo.css
@@ -4,7 +4,7 @@ body{
   background-attachment: fixed;
   background-size: cover;
   color: #cacad8;
-  width: 95%;
+  width: 100%;
   height: 100%;
 }
 main{
@@ -16,59 +16,81 @@ main{
   background-color: rgba(0, 0, 0, .6);
 }
 .container{
-    border: 1px solid black;
-    padding: 10px;
+    /*border: 1px solid black;*/
+    padding-left: 30px;
+    padding-right: 30px;
     position: absolute;
     width: 800px;
     height: 400px;
-    top: 50%;
-    left: 50%;
-    margin-left: -400px;
-    margin-top: -200px;
-    max-width: 100%;
-    padding-left: 150px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
 }
 h1{
   font-size: 700px;
+  padding-top: 20px;
   color: #fff;
   font-size: 60px;
   line-height: 1.6;
   align-content: center;
 }
+.text{
+  text-align: center;
+  padding-right: 65px;
+  padding-left: auto;
+}
 p{
   line-height: 1.25;
+  padding-bottom: 20px;
   font-size: 24px;
-  color: white;
+  color: #BABABA;
   margin-bottom: 16px;
 }
 .box-search{
-  
+  display: flex;
+  flex: auto;
 }
 
 .form-control{
   display: block;
   width: 352px;
-  height: 35px;
+  height: 30px;
   padding: 9px 16px;
   color: #1a2b3a;
   border: 1px solid #bababa;
   border-radius: 5px;
+  line-height: 30px;
   z-index: 9;
+}
+.box-select{
+  padding-left: 50px;
+  display: flex;
+  flex: auto;
 }
 .form-select{
   text-align: left;
   width: 220px;
   height: 50px;
+  top: 1px;
+  padding-left: 15px;
   border: 1px solid #bababa;
   border-radius: 5px;
   z-index: 9;
   line-height: 30px;
   padding: 9px 28px 9px 16px;
 }
-
+.box-button{
+  display: flex;
+  padding-left: 15px;
+}
 button{
   color: white;
-  position: relative;
+  padding-left: 10px;
+  padding-right: 10px;
+  width: 150px;
+  height: 52px;
   background-color: #64aae1;
   border-color: #64aae1;
   line-height: 28px;
